fixing cases images not looking good on firefox medium screens

--- a/src/components/cases-section/cases-section.styles.scss
+++ b/src/components/cases-section/cases-section.styles.scss
@@ -30,7 +30,7 @@
 
       @media (max-width: 768px) {
         flex: 50%;
-        max-width: 50%;
+        max-width: 100%;
         flex-direction: row;
       }
 
@@ -49,6 +49,11 @@
 
       @media (max-width: 768px) {
         height: unset;
+        max-width: 50%;
+      }
+
+      @media (max-width: 500px) {
+        max-width: unset;
       }
     }
     img:hover {
